update .gitignore | pnpm

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,20 @@ yarn-error.log*
 
 # vercel
 .vercel
-.vscode
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.iml
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
